# better-teams

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  biome.json  components.json  forge.config.ts  index.html  knip.json  lefthook.yml  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.mts  vite.config.ts  vite.main.config.mts  vite.preload.config.mts  vitest.config.ts  vitest.setup.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
e2e/: packaged-binary.ts  packaged.spec.ts
electron/: http.ts  image-cache.ts  main.ts  preload.ts  sqlite.ts  token-store.ts
public/: manifest.webmanifest
resources/: icon.icns
scripts/: debug-image-attachment.mjs  debug-image-fetch.mjs  diagnose-azure-msp-chat.ts  dump-company-comms-candidates.ts  dump-full-message.mjs  dump-messages.ts  dump-raw-messages.mjs  dump-screenshot-detail.mjs  dump-thomo-messages.mjs  dump-thread-needle.ts  find-conversation.mjs  find-image-messages.mjs  find-screenshots.mjs  find-teams-message.ts  generate-branding.mjs  insert-backdated-message.ts  inspect-conversation-kinds.ts  send-test-message.ts
src/: App.test.tsx  App.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  constants.test.ts  constants.ts  index.css  main.tsx  renderer-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: image_cache.rs  mod.rs  token.rs
(+57 files in other folders)
