[package]
name = "better-teams"
version = "1.0.0"
description = "A calmer, faster Microsoft Teams desktop experience"
authors = ["Dirk Beukes"]
edition = "2021"

[lib]
name = "better_teams_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "macos-private-api"] }
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
aes = "0.8"
cbc = "0.1"
pbkdf2 = { version = "0.12", features = ["std"] }
sha1 = "0.10"
security-framework = "3"
base64 = "0.22"
regex = "1"
dirs = "6"
